discussion/kv_engine/132147/132147_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38428: Allow flusher to run in parallel with compaction WIP

We're compacting the current database file into the new file
without holding any locks. The thread performing the compaction
holds the file open so it can't go away while it is traversing
the data in there, and it knows where in the file the "current"
header is located so it also knows where to stop reading data.

Once all of the data up to the "current" header is written it'll
grab the lock and append the mutations which happened after
compaction started (this is not implemented yet) (@todo need to
make that work with PiTR as well)

Change-Id: Ic655a896305d7f0e20f7ff7aa8927c3c31880ba1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-07-09 13:05:41.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-09 13:34:41.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25099/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: no member named "replay" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25099/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29095/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(983): error C2039: "replay": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29095/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3275/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27: error: no member named "replay" in namespace "cb::couchstore" [clang-diagnostic-error]
    err = cb::couchstore::replay(
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3275/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: no member named "replay" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3740/ : FAILURE

Compile error at [2020-07-09T13:09:04.280Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: no member named "replay" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4634/ : FAILURE

Compile error at [2020-07-09T13:06:55.243Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: ?replay? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4818/ : FAILURE

Compile error at [2020-07-09T13:11:13.903Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: ?replay? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4818/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4707/ : FAILURE

Compile error at [2020-07-09T13:17:55.590Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:983:27:
error: ?replay? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4707/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12531/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1782/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
